--- a/src/tasks/apply.yaml
+++ b/src/tasks/apply.yaml
@@ -17,9 +17,9 @@
 
 - name: Configure machine patches
   ansible.builtin.copy:
-    content: "{{ patch | to_nice_yaml(2,false) }}"
+    content: "{{ machinepatches | to_nice_yaml(2,false) }}"
     dest: "{{ datastore }}/patches/{{ inventory_hostname }}.yaml"
-  when: patch | default({}) | length > 0
+  when: machinepatches | default({}) | length > 0
 
 - name: Apply configs
   include_tasks: tasks/actions/apply.yaml
