--- a/src/tasks/addons/cilium.yaml
+++ b/src/tasks/addons/cilium.yaml
@@ -8,7 +8,7 @@
       apiVersion: v1
       kind: Namespace
       metadata:
-        name: "{{ cilium.namespace }}"
+        name: "{{ addons.cilium.namespace }}"
         labels:
           pod-security.kubernetes.io/enforce: privileged
           pod-security.kubernetes.io/enforce-version: latest
@@ -16,7 +16,7 @@
           pod-security.kubernetes.io/audit-version: latest
           pod-security.kubernetes.io/warn: privileged
           pod-security.kubernetes.io/warn-version: latest
-  when: cilium.namespace | default('kube-system') != 'kube-system'
+  when: addons.cilium.namespace | default('kube-system') != 'kube-system'
 
 - name: Install/Upgrade Cilium
   environment:
@@ -33,16 +33,26 @@
       --set cgroup.hostRoot=/sys/fs/cgroup 
       --set k8sServiceHost=localhost 
       --set k8sServicePort=7445
-      --version "{{ cilium.version | default('') }}"
-      --namespace {{ cilium.namespace | default('kube-system') }}
-      {% if cilium.use_default_policy | default(false) %}
+      --version "{{ addons.cilium.version | default('') }}"
+      --namespace {{ addons.cilium.namespace | default('kube-system') }}
+      {% if addons.cilium.use_default_policy | default(false) %}
       --set extraArgs[0]=--static-cnp-path=/policies
-      --set extraHostPathMounts[0].name=static-policies
-      --set extraHostPathMounts[0].mountPath=/policies
-      --set extraHostPathMounts[0].hostPath=/var/lib/networkpolicies/
-      --set extraHostPathMounts[0].hostPathType=DirectoryOrCreate
+      --set extraHostPathMounts[0].name=default
+      --set extraHostPathMounts[0].mountPath=/policies/default.yaml
+      --set extraHostPathMounts[0].hostPath=/var/lib/Talos-Manager/cilium/default.yaml
+      --set extraHostPathMounts[1].name=dns
+      --set extraHostPathMounts[1].mountPath=/policies/kube-dns.yaml
+      --set extraHostPathMounts[1].hostPath=/var/lib/Talos-Manager/cilium/kube-dns.yaml
+      --set extraHostPathMounts[2].name=kube-system
+      --set extraHostPathMounts[2].mountPath=/policies/kube-system.yaml
+      --set extraHostPathMounts[2].hostPath=/var/lib/Talos-Manager/cilium/kube-system.yaml
+      {% if addons.cilium.namespace | default('kube-system') != 'kube-system' %}
+      --set extraHostPathMounts[3].name=cilium
+      --set extraHostPathMounts[3].mountPath=/policies/cilium-namespace.yaml
+      --set extraHostPathMounts[3].hostPath=/var/lib/Talos-Manager/cilium/cilium-namespace.yaml
       {% endif %}
-      {% if cilium.helm_values | default({}) | length > 0 %}
+      {% endif %}
+      {% if addons.cilium.helm_values | default({}) | length > 0 %}
       --values {{ datastore }}/configs/cilium-values.yaml
       {% endif %}
   register: _output
