--- a/src/main.yaml
+++ b/src/main.yaml
@@ -6,10 +6,8 @@
     datastore: "/data"
     talosconfig: "{{ datastore }}/configs/talosconfig"
     kubeconfig: "{{ datastore }}/configs/kubeconfig"
-
-    data_host: "/host"
-    talosconfig_host: "{{ data_host }}/.talos/config"
-    kubeconfig_host: "{{ data_host }}/.kube/config"
+    talosconfig_host: "/.talos/config"
+    kubeconfig_host: "/.kube/config"
 
     talos_args: "-n {{ inventory_hostname }} -e {{ inventory_hostname }} --talosconfig {{ talosconfig }}"
   pre_tasks:
