--- a/src/tasks/utils/wait_talos.yaml
+++ b/src/tasks/utils/wait_talos.yaml
@@ -1,4 +1,4 @@
-- name: Wait for the Talos API to be available
+- name: Make sure the Talos API is available
   wait_for:
     host: "{{ inventory_hostname }}"
     port: 50000
